--- a/index.html
+++ b/index.html
@@ -100,7 +100,18 @@
                         </div>
                     </div>
                 </div>
-              </section>
+                 </section>
+                <!-- FIFTH SECTION -->
+                 <section class="layout-4">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-100">
+                                <img src="./img/item4-big.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
 
 
         
