Update fifth section

--- a/index.html
+++ b/index.html
@@ -105,9 +105,19 @@
                  <section class="layout-4">
                     <div class="container">
                         <div class="row">
+                            <div class="tecnology">
+                                <h1 class="title">Tecnologia affidabile per tenersi in contatto</h1>
+                                <br>
+                                <p class="description">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza.Fai ciao in video,guarda gli amici giocare in streaming,o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                            </div>
                             <div class="col-100">
                                 <img src="./img/item4-big.svg" alt="">
                             </div>
+                            <div class="download">
+                                <h1>Pronto ad Iniziare la tua avventura?</h1>
+                                <br>
+                                <a class="login mac" href="">Scarica Per Mac</a>
+                             </div>
                         </div>
                     </div>
                 </section>
