--- a/index.html
+++ b/index.html
@@ -121,6 +121,130 @@
                         </div>
                     </div>
                 </section>
+                <!-- FOOTER -->
+                 <section class="layout-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-20">
+                               <h1 class="footer-title">Il tuo posto per parlare</h1> 
+                               <br>
+                               <p class="footer-text"><img class="italia" src="./img/ita.png" alt="">Italiano</p>
+                               <div class="icons">
+                                    <img src="./img/icons8-facebook-24.png" alt="">
+                                    <img src="./img/icons8-instagram-24.png" alt="">
+                                    <img src="./img/icons8-twitter-24.png" alt="">
+                                    <img src="./img/icons8-youtube-24.png" alt="">
+                                </div>
+                            </div>
+                            <!-- COLONNA 1 -->
+                            <div class="col-20">
+                                <ul class="service">
+                                    <h3 class="subsection-title">Prodotto</h3>
+                                    <li>
+                                        Scarica
+                                    </li>
+                                    <li>
+                                        Perché Discord
+                                    </li>
+                                    <li>
+                                        Nitro
+                                    </li>
+                                    <li>
+                                        Sicurezza
+                                    </li>
+                                    <li>
+                                        Assistenza
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- COLONNA 2 -->
+                            <div class="col-20">
+                                <ul class="service">
+                                    <h3 class="subsection-title">Compagnia</h3>
+                                    <li>
+                                        Chi siamo
+                                    </li>
+                                    <li>
+                                        Lavora con noi
+                                    </li>
+                                    <li>
+                                        Marchio
+                                    </li>
+                                    <li>
+                                        Redazione 
+                                    </li>
+                                    <li>
+                                        Negozio
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- COLONNA 3 -->
+                            <div class="col-20">
+                                <ul class="service">
+                                    <h3 class="subsection-title">Risorse</h3>
+                                    <li>
+                                       Scarica
+                                    </li>
+                                    <li>
+                                        Perché Discord
+                                    </li>
+                                    <li>
+                                        Nitro
+                                    </li>
+                                    <li>
+                                        Sicurezza
+                                    </li>
+                                    <li>
+                                        Assistenza
+                                    </li>
+                                    <li>
+                                        Scarica
+                                     </li>
+                                     <li>
+                                         Perché Discord
+                                     </li>
+                                     <li>
+                                         Nitro
+                                     </li>
+                                     <li>
+                                         Sicurezza
+                                     </li>
+                                     <li>
+                                         Assistenza
+                                     </li>
+                                
+                                </ul>
+                            </div>
+                            <!-- COLONNA 4 -->
+                            <div class="col-20">
+                                <ul class="service">
+                                    <h3 class="subsection-title">Norme</h3>
+                                    <li>
+                                        Scarica
+                                    </li>
+                                    <li>
+                                        Perché Discord
+                                    </li>
+                                    <li>
+                                        Nitro
+                                    </li>
+                                    <li>
+                                        Sicurezza
+                                    </li>
+                                    <li>
+                                        Assistenza
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
+                            <!-- FOOTER -->
+                            <nav class="container navbar">
+                                <a class="logo" href=""><img src="./img/logo.svg" alt=""></a>
+                                <a class="register" href="">Registrati</a>
+                            </nav>   
+                     </div>
+                </section>
 
 
 
