--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="col-100">
                             <h1 class="title">Il tuo posto per parlare</h1>
-                            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quisquam. Incidunt quia rem aliquam blanditiis ipsam ad, ea quae autem repellendus quibusdam aspernatur doloribus? Doloremque molestiae neque voluptate natus quae.</div>
+                            <div class="description">Che tu faccia parte di un club scolastico,gruppo di gamer,comunitá artistica mondiale.o semplicemente di un piccolo gruppo di amici che vuole passare del tempo assieme,Discord rende piú facile chiacchierare ogni giorno e ritrovarsi piú spesso</div>
                                 <div class="cta">
                                      <a class="login" href="">Scarica Per Mac</a>
                                      <a class="login browser" href="">Apri Discord nel tuo browser</a>
@@ -57,7 +57,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-60">
-                                <img class="col-60" src="./img/item1.svg" alt="">
+                                <img src="./img/item1.svg" alt="">
                             </div>
                             <div class="col-40">
                                 <h1 class="title">Un Luogo a invito con tutto lo spazio per parlare</h1>
@@ -89,7 +89,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-60">
-                                <img class="col-60" src="./img/item3.svg" alt="">
+                                <img src="./img/item3.svg" alt="">
                             </div>
                             <div class="col-40">
                                 <h1 class="title">Da pochi a un fandom</h1>
